...

        if (options.hasKey("buttonLeftText") || options.hasKey("buttonRightText") || options.getString("type") == "countdown") {
            try {
                val popupOptionClass = Class.forName("com.nasmedia.admixerssp.ads.PopupInterstitialAdOption")
                val popupConfig = popupOptionClass.getConstructor().newInstance()

                val buttonLeft = options.getString("buttonLeftText") ?: "닫기"
                popupOptionClass.getMethod("setButtonLeft", String::class.java, String::class.java)
                    .invoke(popupConfig, buttonLeft, null)

                val buttonRight = if (options.hasKey("buttonRightText")) options.getString("buttonRightText") else null
                if (buttonRight != null) {
                    popupOptionClass.getMethod("setButtonRight", String::class.java, String::class.java)
...
