appId: org.reactjs.native.example.IntegrationTestApp
---
- launchApp:
    clearState: true
- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"
- extendedWaitUntil:
    visible:
      id: "init-button"
    timeout: 30000
- tapOn:
    id: "init-button"
- extendedWaitUntil:
    visible: "SDK: success"
    timeout: 20000
- scrollUntilVisible:
    element: "1. 배너 광고 (320×50)"
    direction: DOWN
- tapOn:
    id: "banner-load-button"
- extendedWaitUntil:
    visible: "BANNER_STATUS:LOADED:IMPRESSION"
    timeout: 30000
- scrollUntilVisible:
    element:
      id: "native-load-button"
    direction: DOWN
- tapOn:
    id: "native-load-button"
- extendedWaitUntil:
    visible: "더보기"
    timeout: 30000
    optional: true
- scrollUntilVisible:
    element:
      id: "native-status-top"
    direction: DOWN
    timeout: 30000
    visibilityPercentage: 20
    centerElement: true
- extendedWaitUntil:
    visible:
      id: "native-status-top"
      text: "NATIVE_STATUS:LOADED:IMPRESSION"
    timeout: 45000
- scrollUntilVisible:
    element:
      id: "interstitial-show-button"
    direction: DOWN
    timeout: 30000
    visibilityPercentage: 20
    centerElement: true
- tapOn:
    id: "interstitial-show-button"
- extendedWaitUntil:
    visible: "x"
    timeout: 8000
    optional: true
- extendedWaitUntil:
    visible: "TEST"
    timeout: 8000
    optional: true
- tapOn:
    point: "94%,9%"
- tapOn:
    point: "94%,9%"
- scrollUntilVisible:
    element:
      id: "summary-inter-status"
    direction: DOWN
    timeout: 30000
    visibilityPercentage: 20
    centerElement: true
- extendedWaitUntil:
    visible:
      id: "summary-inter-opened-yes"
    timeout: 12000
    optional: true
- extendedWaitUntil:
    visible:
      id: "summary-inter-impression-yes"
    timeout: 12000
    optional: true
- runFlow:
    when:
      visible:
        id: "summary-inter-status"
        text: "INTER_STATUS:LOADED:NOT_OPENED:NO_IMPRESSION"
    commands:
      - scrollUntilVisible:
          element:
            id: "interstitial-show-button"
          direction: DOWN
          timeout: 30000
          visibilityPercentage: 20
          centerElement: true
      - tapOn:
          id: "interstitial-show-button"
      - scrollUntilVisible:
          element:
            id: "summary-inter-status"
          direction: DOWN
          timeout: 30000
          visibilityPercentage: 20
          centerElement: true
- extendedWaitUntil:
    visible:
      id: "summary-inter-opened-yes"
    timeout: 15000
- extendedWaitUntil:
    visible:
      id: "summary-inter-impression-yes"
    timeout: 15000
